--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                                                 <p> My mathematical apprenticeship began in the late 90s as a student at the (amazing) <a href="https://rossprogram.org/">Ross Mathematics Program</a>. In 2018 and 2019 I had the privilege of teaching in China at the Ross/Asia Program. In 2020 and 2021, I was an instructor for the online  Ross program and in 2022 I was a Ross program instructor in Columbus, OH.</p>
                                                 <p>I am a proud member of the <a href="https://www.maa.org/">MAA</a>, <a href="https://www.ams.org/home/page">AMS</a>, <a href="https://amathr.org/">AMR</a>, <a href="https://awm-math.org/">AWM</a>, and <a href="https://heterodoxacademy.org/">HxA</a>.</p>
                                                 <p>
-                                                    <a class="btn btn--md bg--standard no-border-radius" href="http://pollack.uga.edu/cv.pdf">
+                                                    <a class="btn btn--md bg--standard no-border-radius" href="cv.pdf">
                                                         <span class="btn__text"><i class="pp-icon-doc"></i> Curriculum Vitae</span>
                                                     </a>
                                                 </p>
@@ -183,10 +183,10 @@
                                                             <p>
                                                                 <span>Published by the American Mathematical Society (2009). Now available free for download by permission of the AMS. </span></p>
                                                             <div class="book-buttons">
-                                                                <a class="btn btn--md bg--standard bg--download no-border-radius" href="http://pollack.uga.edu/NABDofficial.pdf">
+                                                                <a class="btn btn--md bg--standard bg--download no-border-radius" href="NABDofficial.pdf">
                                                                     <span class="btn__text"><i class="pp-icon-download"></i>Download</span>
                                                                 </a>
-                                                                <a class="btn btn--md bg--standard bg--errata no-border-radius" href="http://pollack.uga.edu/errata.pdf">
+                                                                <a class="btn btn--md bg--standard bg--errata no-border-radius" href="errata.pdf">
                                                                     <span class="btn__text"><i class="pp-icon-errata"></i> Errata</span>
                                                                 </a>
                                                                 <a class="btn btn--md bg--standard bg--purchase no-border-radius" href="http://bookstore.ams.org/mbk-68/">
