--- a/8440s23.html
+++ b/8440s23.html
@@ -117,24 +117,24 @@
                                             </div>
                                                 <div class="module-content col-sm-9">
                                                     <ul class="assignment-list">
-                                                        <li class="with-bullet"><span class="col-md-9 assignment-name">Assignment #8</span><span class="col-md-2 due-date">(none)</span><span class="col-md-1"><a href="http://pollack.uga.edu/8440s23/hw8.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
+                                                        <li class="with-bullet"><span class="col-md-9 assignment-name">Assignment #8</span><span class="col-md-2 due-date">(none)</span><span class="col-md-1"><a href="/8440s23/hw8.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                         </li> 
-                                                        <li class="with-bullet"><span class="col-md-9 assignment-name">Assignment #7</span><span class="col-md-2 due-date"><del>Fri, 4/21</del> Mon, 4/24</span><span class="col-md-1"><a href="http://pollack.uga.edu/8440s23/hw7.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
+                                                        <li class="with-bullet"><span class="col-md-9 assignment-name">Assignment #7</span><span class="col-md-2 due-date"><del>Fri, 4/21</del> Mon, 4/24</span><span class="col-md-1"><a href="/8440s23/hw7.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                         </li>
-                                                        <li class="with-bullet"><span class="col-md-9 assignment-name">Assignment #6</span><span class="col-md-2 due-date"><del>Mon, 4/10</del> Wed, 4/12</span><span class="col-md-1"><a href="http://pollack.uga.edu/8440s23/hw6.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
+                                                        <li class="with-bullet"><span class="col-md-9 assignment-name">Assignment #6</span><span class="col-md-2 due-date"><del>Mon, 4/10</del> Wed, 4/12</span><span class="col-md-1"><a href="/8440s23/hw6.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                         </li>
-                                                        <li class="with-bullet"><span class="col-md-9 assignment-name">Assignment #5</span><span class="col-md-2 due-date">Mon, 3/27</span><span class="col-md-1"><a href="http://pollack.uga.edu/8440s23/hw5.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
+                                                        <li class="with-bullet"><span class="col-md-9 assignment-name">Assignment #5</span><span class="col-md-2 due-date">Mon, 3/27</span><span class="col-md-1"><a href="/8440s23/hw5.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                         </li>
-                                                        <li class="with-bullet"><span class="col-md-9 assignment-name">Assignment #4</span><span class="col-md-2 due-date">Mon, 2/27</span><span class="col-md-1"><a href="http://pollack.uga.edu/8440s23/hw4.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
-                                                        </li>
-
-                                                        <li class="with-bullet"><span class="col-md-9 assignment-name">Assignment #3 </span><span class="col-md-2 due-date">Mon, 2/13</span><span class="col-md-1"><a href="http://pollack.uga.edu/8440s23/hw3.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
+                                                        <li class="with-bullet"><span class="col-md-9 assignment-name">Assignment #4</span><span class="col-md-2 due-date">Mon, 2/27</span><span class="col-md-1"><a href="/8440s23/hw4.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                         </li>
 
-                                                        <li class="with-bullet"><span class="col-md-9 assignment-name">Assignment #2</span><span class="col-md-2 due-date">Wed, 2/1</span><span class="col-md-1"><a href="http://pollack.uga.edu/8440s23/hw2.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
+                                                        <li class="with-bullet"><span class="col-md-9 assignment-name">Assignment #3 </span><span class="col-md-2 due-date">Mon, 2/13</span><span class="col-md-1"><a href="/8440s23/hw3.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
+                                                        </li>
+
+                                                        <li class="with-bullet"><span class="col-md-9 assignment-name">Assignment #2</span><span class="col-md-2 due-date">Wed, 2/1</span><span class="col-md-1"><a href="/8440s23/hw2.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                         </li>
                                         
-                                                        <li class="with-bullet"><span class="col-md-9 assignment-name">Assignment #1</span><span class="col-md-2 due-date">Mon, 1/23</span><span class="col-md-1"><a href="http://pollack.uga.edu/8440s23/hw1.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
+                                                        <li class="with-bullet"><span class="col-md-9 assignment-name">Assignment #1</span><span class="col-md-2 due-date">Mon, 1/23</span><span class="col-md-1"><a href="/8440s23/hw1.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                         </li></ul>
 
 </div>
