--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <p>I am a Professor in the Mathematics Department at the <a href="http://www.uga.edu/">University of Georgia</a>.</p>
-                                                <p> My mathematical apprenticeship began in the late 90s as a student at the (amazing) <a href="https://rossprogram.org/">Ross Mathematics Program</a>. In 2018 and 2019 I had the privilege of teaching in China at the Ross/Asia Program. In 2020 and 2021, I was an instructor for the online  Ross program and in 2022 I was a Ross program instructor in Columbus, OH.</p>
+                                                <p> My mathematical apprenticeship began in the late 90s as a student at the (amazing) <a href="https://rossprogram.org/">Ross Mathematics Program</a>. In 2018 and 2019 I had the privilege of teaching in China at the Ross/Asia Program. In 2020 and 2021, I was an instructor for the online Ross Program. The Ross Program resumed in-person instruction in 2022, and I was one of the lecturers at the Columbus, OH camp that summer. In 2023, I taught at the Indiana branch of the camp.</p>
                                                 <p>I am a proud member of the <a href="https://www.maa.org/">MAA</a>, <a href="https://www.ams.org/home/page">AMS</a>, <a href="https://amathr.org/">AMR</a>, <a href="https://awm-math.org/">AWM</a>, and <a href="https://heterodoxacademy.org/">HxA</a>.</p>
                                                 <p>
                                                     <a class="btn btn--md bg--standard no-border-radius" href="http://pollack.uga.edu/cv.pdf">
@@ -138,12 +138,12 @@
                                         </div>
                                         <div class="module-block row">
                                             <div class="module-title col-sm-3 text-right">
-                                                <h6>Teaching (Spring 2023)</h6>
+                                                <h6>Teaching (Fall 2023)</h6>
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul>
-                                                    <li><a href="4400s23.html">MATH 4400: Elementary Number Theory</a></li>
-													<li><a href="8440s23.html">MATH 8440: Multiplicative Number Theory</a></li>
+                                                    <li>MATH 3100: Sequences and Series
+													<li>MATH 8440: Topics in Multiplicative Number Theory</li>
                                                   </ul>
                                             </div>
                                         </div>
