--- a/research.html
+++ b/research.html
@@ -69,8 +69,8 @@
                                                 <i class="pp-icon-doc icon icon--lg"></i> Courses
                                             </a>
                                             <ul>
-                                              <li><a href="4400s23.html">MATH 4400</a></li>
-                                         <li><a href="8440s23.html">MATH 8440</a></li>
+                                              <li>MATH 3100</li>
+                                         <li>MATH 8440</li>
                                             </ul>
                                         </li>
 
