--- a/3100f23.html
+++ b/3100f23.html
@@ -66,7 +66,8 @@
                                             <i class="pp-icon-doc icon icon--lg"></i> Courses
                                         </a>
                                       <ul>
-                                            <li><a href="3100f22.html">MATH 3100</a></li>
+                                            <li><a href="3100f23.html">MATH 3100</a></li>
+                                            <li>MATH 8440</li>
                                         
                                         </ul>
                                     </li>
@@ -92,7 +93,7 @@
                                         <div class="course-title bg__3">
                                             <div class="col-md-9">
                                                 <h4>MATH 3100: Sequences and Series</h4>
-                                                <h5>MWF 1:50 PM-2:40 PM, Dawson Hall, Room 222</h5>
+                                                <h5>MWF 1:50 PM-2:40 PM Boyd Research and Education Center, Room 222</h5>
                                             </div>
                                             <div class="col-md-3 semester-wrapper text-right"><span class="semester">Fall 2023</span></div>
                                         </div>
