--- a/3100f23.html
+++ b/3100f23.html
@@ -193,10 +193,10 @@ Both at office and in class, you should expect that your input will be treated r
                                             <div class="module-content col-sm-9">
                                                 <p>There are three in-class midterm exams as well as a final exam.</p>
                                                 <ul>
-                                                    <li class="with-bullet">Midterm #1: Friday, September 16</li>
-                                                    <li class="with-bullet">Midterm #2: Friday, October 14</li>
-                                                    <li class="with-bullet">Midterm #3: Monday, November 21</li>
-                                                    <li class="with-bullet">Final exam: Wed, December 14, 12:00-3 PM (usual classroom)</li>
+                                                    <li class="with-bullet">Midterm #1: Friday, September 15</li>
+                                                    <li class="with-bullet">Midterm #2: Friday, October 13</li>
+                                                    <li class="with-bullet">Midterm #3: Monday, November 20</li>
+                                                    <li class="with-bullet">Final exam: Wed, December 13, 12:00-3 PM (location TBA)</li>
                                                 </ul>
                                                 <p>No make-up exams will be given. The final exam is <strong>cumulative</strong>.</p>
                                             </div>
