--- a/3100f23.html
+++ b/3100f23.html
@@ -228,7 +228,7 @@ Both at office and in class, you should expect that your input will be treated r
                                                 </p>
                                             </div>
                                         </div>
-                                        <div class="module-block row">
+                                        <!-- <div class="module-block row">
                                             <div class="module-title col-sm-3 text-right">
                                                 <h6>COVID protocols</h6>
                                             </div>
@@ -236,7 +236,7 @@ Both at office and in class, you should expect that your input will be treated r
                                                 <p> During the COVID era, all of us bear a responsibility to think about the health and safety of UGA and the larger community. Please be considerate to others as well as good to yourself: If you suspect infection, please test yourself and isolate as appropriate.
                                                 </p>
                                             </div>
-                                        </div>
+                                        </div> -->
                                         <div class="module-block row">
                                             <div class="module-title col-sm-3 text-right">
                                                 <h6>Special accommodations</h6>
@@ -250,7 +250,7 @@ Both at office and in class, you should expect that your input will be treated r
                                                 <h6>Mental health and wellness</h6>
                                             </div>
                                             <div class="module-content col-sm-9"<p>
-                                        If you or someone you know needs assistance, you are encouraged to contact Student Care and Outreach in the Division of Student Affairs at 706-542-7774 or visit <a href="https://sco.uga.edu">https://sco.uga.edu</a>. They will help you navigate any difficult circumstances you may be facing by connecting you with the appropriate resources or services.
+                                        If you or someone you know needs assistance, you are encouraged to contact Student Care and Outreach in the Division of Student Affairs at 706-542-8479 or visit <a href="https://sco.uga.edu">https://sco.uga.edu</a>. They will help you navigate any difficult circumstances you may be facing by connecting you with the appropriate resources or services.
                </div>
                                         </div>
                                     </div>
