--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
                                             <i class="pp-icon-doc icon icon--lg"></i> Courses
                                         </a>
                                   <ul>
-                                              <li><a href="4400s23.html">MATH 4400</a></li>
-                                         <li><a href="8440s23.html">MATH 8440</a></li>
+                                              <li><a href="3100f23.html">MATH 3100</a></li>
+                                         <li>MATH 8440</li>
                                             </ul>
                                     </li>
                                 </ul>
@@ -106,7 +106,7 @@
                                             <!-- end block title -->
                                             <!-- begin content block -->
                                             <div class="module-content col-sm-9">
-                                                <blockquote>I'm Buffy. The Vampire Slayer. And you are...?<span>– Buffy Summers, <a href="http://www.imdb.com/title/tt0533389/">BtVS Episode 3.1 ("Anne")</a></span>
+                                                <blockquote>Don't underestimate the joy of a midnight bagel!<span>– Rebeccca Bunch, <a href="https://www.imdb.com/title/tt5242184/">CxG Episode 1.12</a></span>
                                                 </blockquote>
                                             </div>
                                             <!-- end content block -->
