--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                                             <!-- end block title -->
                                             <!-- begin content block -->
                                             <div class="module-content col-sm-9">
-                                                <blockquote>Don't underestimate the joy of a midnight bagel!<span>– Rebeccca Bunch, <a href="https://www.imdb.com/title/tt5242184/">CxG Episode 1.12</a></span>
+                                                <blockquote>Don't underestimate the joy of a midnight bagel!<span>– Rebecca Bunch, <a href="https://www.imdb.com/title/tt5242184/">CxG Episode 1.12</a></span>
                                                 </blockquote>
                                             </div>
                                             <!-- end content block -->
