--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                                         </a>
                                   <ul>
                                               <li><a href="3100f23.html">MATH 3100</a></li>
-                                         <li>MATH 8440</li>
+                                         <li>MATH 8440 (reading/seminar course)</li>
                                             </ul>
                                     </li>
                                 </ul>
