--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                                         </a>
                                   <ul>
                                               <li><a href="3100f23.html">MATH 3100</a></li>
-                                         <li>MATH 8440 (reading/seminar course)</li>
+                                         <li>MATH 8440</li>
                                             </ul>
                                     </li>
                                 </ul>
@@ -143,7 +143,7 @@
                                             <div class="module-content col-sm-9">
                                                 <ul>
                                                     <li>MATH 3100: Sequences and Series
-													<li>MATH 8440: Topics in Multiplicative Number Theory</li>
+													<li>MATH 8440: Topics in Multiplicative Number Theory  (reading/seminar course)</li>
                                                   </ul>
                                             </div>
                                         </div>
