--- a/3100f23.html
+++ b/3100f23.html
@@ -101,7 +101,7 @@
                                             <div class="course-info col-sm-12 col-md-4 col-lg-3">
                                                 <div class="office">
                                                     <strong>Office:</strong>
-                                                    <br> 406 Boyd Graduate Studies Building
+                                                    <br> 406 Boyd 
                                                 </div>
                                                 <div class="office-hours"><p>
                                                      <strong>Office hours:</strong><br>
