--- a/research.html
+++ b/research.html
@@ -69,7 +69,7 @@
                                                 <i class="pp-icon-doc icon icon--lg"></i> Courses
                                             </a>
                                             <ul>
-                                              <li>MATH 3100</li>
+                                              <li><a href="3100f23.html">MATH 3100</a></li>
                                          <li>MATH 8440</li>
                                             </ul>
                                         </li>
