--- a/research.html
+++ b/research.html
@@ -2526,7 +2526,7 @@ $$ \frac{e^{-\gamma} x}{\log\log\log{x}} \left(1-\frac{\gamma}{\log\log\log{x}} 
                                                         <div class="col-sm-10">
                                                             <h4>    <span class="paper-title">A problem in comparative order theory</span>  <span class="paper-author">(w/ S. Konyagin)</span>          </h4>
                                                             <p>
-                                                            <a href="https://www.springer.com/journal/10998"><span class="journal-name">Period. Math. Hungar.</span></a>  (<span class="paper-year">to appear</span>)</p>
+                                                            <a href="https://www.springer.com/journal/10998"><span class="journal-name">Period. Math. Hungar.</span></a> 86 (<span class="paper-year">2023</span>), 24--36</p>
                                                         </div>
                                                         <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/ordersproblem.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
                                                         <div class="paper-abstract col-md-12 col-xs-12">
@@ -2645,7 +2645,7 @@ $$ \frac{e^{-\gamma} x}{\log\log\log{x}} \left(1-\frac{\gamma}{\log\log\log{x}} 
                     <div class="col-sm-10">
                         <h4>    <span class="paper-title">Benford behavior and distribution in residue classes of large prime factors</span>  <span class="paper-author">(w/ A. Singha Roy)</span>          </h4>
                         <p>
-                            <a href="https://www.cambridge.org/core/journals/canadian-mathematical-bulletin"><span class="journal-name">Canad. Math. Bull.</span></a> (<span class="paper-year">to appear</span>)</p>
+                            <a href="https://www.cambridge.org/core/journals/canadian-mathematical-bulletin"><span class="journal-name">Canad. Math. Bull.</span></a> 66 (<span class="paper-year">2023</span>), 626--642</p>
                     </div>
                     <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/smoothbenford.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
                     <div class="paper-abstract col-md-12 col-xs-12">
@@ -2665,7 +2665,7 @@ $$ \frac{e^{-\gamma} x}{\log\log\log{x}} \left(1-\frac{\gamma}{\log\log\log{x}} 
                     <div class="col-sm-10">
                         <h4>    <span class="paper-title">On the greatest common divisor of a number and its sum of divisors, II</span>  <span class="paper-author"></span>          </h4>
                         <p>
-                       memorial volume for Eduard Wirsing  (<span class="paper-year">to appear</span>)</p>
+                            <a href="https://link.springer.com/book/9783031316166">Number Theory in Memory of Eduard Wirsing</a>, Helmut Maier, Jörn Steuding, Rasa Steuding, eds. Springer Cham (<span class="paper-year">to appear</span>)</p>
                     </div>
                     <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/gcdnsigmasequel.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
                     <div class="paper-abstract col-md-12 col-xs-12">
@@ -2785,6 +2785,14 @@ $$ \frac{e^{-\gamma} x}{\log\log\log{x}} \left(1-\frac{\gamma}{\log\log\log{x}} 
         <span class="paper-author">(w/ N. McNew and A. Singha Roy)</span></h4>
     </div>
     <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/middleprime.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
+</li>         
+
+<li class="col-sm-12 list-item with-bullet">
+    <div class="col-sm-10">
+        <h4> <span class="paper-title">$\mathbb{Z}[\sqrt{-5}]$: halfway to unique factorization</span>
+        <span class="paper-author"></span></h4>
+    </div>
+    <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/HFD.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
 </li>         
 
 
