--- a/8440f23.html
+++ b/8440f23.html
@@ -145,8 +145,20 @@
                                                 <h6>Course summary</h6>
                                             </div>
                                             <div class="module-content col-sm-9">
-                                                <p></p>
-                                                
+                                                <p>This is a reading/seminar course focused on special topics in analytic number theory. We will concentrate our attention on classic (rather than &quot;cutting edge&quot;) papers, and we will focus attention on those that discuss  statistical questions about arithmetic objects.
+                                                    <p><b>Reading'</b>: Y'all will read papers.<br><b>Seminar</b>: Y'all will present the papers to me and to each other.</p>
+                                                    <p> As I see it, the overarching goal of this course is to introduce you to techniques that have proved important in the field and that may prove important in your thesis work. My intention is for us to concentrate more on the ideas than on technical details.
+                                                    </p>
+                                                <p> How we organize our meetings is largely up to you. I would encourage you to work in groups and, within each group, to alternate who presents. As far as the actual papers, this is something we will discuss amongst ourselves on Day #1. To kick things off, here are a few possible topics; I am happy to suggest papers to go along with each.
+                                                <ul list-style: square;>
+                                                <li class="with-bullet"> Erdős--Wintner theorem
+                                                <li class="with-bullet"> Erdős--Kac theorem
+                                                <li class="with-bullet"> Artin's primitive root conjecture and the theorems of Hoooley, Gupta--Murty--Srinivasan--Heath-Brown
+                                                <li class="with-bullet"> Bounds on character sums and applications to the distribution of power residues 
+                                                </li>
+                                                </ul>
+<p>This is not intended as a comprehensive list. In particular, you should feel free to propose papers, or topics, that are of interest to you! </p>
+                                                </p>
                                             </div>
                                         </div>
                                     </div>
@@ -163,7 +175,7 @@
                                                 <h6>Homework/Exams/Grading</h6>
                                             </div>
                                             <div class="module-content col-sm-9">
-                                                <p> This is a seminar/reading course. Your grade is based entirely on your participation as a member of our class community. 
+                                                <p> As befits a class of this kind, your grade is based entirely on your participation as a member of our class community. 
 												</p>
                                         </div></div>
                                         <div class="module-block row">
