--- a/3100f23.html
+++ b/3100f23.html
@@ -67,7 +67,7 @@
                                         </a>
                                       <ul>
                                             <li><a href="3100f23.html">MATH 3100</a></li>
-                                            <li>MATH 8440</li>
+                                            <li><a href="8440f23.html">MATH 8440</a></li>
                                         
                                         </ul>
                                     </li>
