--- a/8440f23.html
+++ b/8440f23.html
@@ -66,8 +66,8 @@
                                             <i class="pp-icon-doc icon icon--lg"></i> Courses
                                         </a>
                                         <ul>
-                                            <li><a href="4400s23.html">MATH 4400/6400</a></li>
-                                            <li><a href="8440s23.html">Math 8440</a></li>
+                                            <li><a href="3100f23.html">MATH 3100</a></li>
+                                            <li><a href="8440f23.html">MATH 8440</a></li>
                                         </ul>
                                     </li>
                                 </ul>
