--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                                         </a>
                                   <ul>
                                               <li><a href="3100f23.html">MATH 3100</a></li>
-                                         <li>MATH 8440</li>
+                                         <li><a href="8440f23.html">MATH 8440</a></li>
                                             </ul>
                                     </li>
                                 </ul>
@@ -142,8 +142,8 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul>
-                                                    <li>MATH 3100: Sequences and Series
-													<li>MATH 8440: Topics in Multiplicative Number Theory  (reading/seminar course)</li>
+                                                    <li><a href="3100f23.html">MATH 3100</a>: Sequences and Series
+													<li><a href="8440f23.html">MATH 8440</a>: Topics in Multiplicative Number Theory  (reading/seminar course)</li>
                                                   </ul>
                                             </div>
                                         </div>
