--- a/research.html
+++ b/research.html
@@ -2795,6 +2795,15 @@ $$ \frac{e^{-\gamma} x}{\log\log\log{x}} \left(1-\frac{\gamma}{\log\log\log{x}} 
     <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/HFD.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
 </li>         
 
+<li class="col-sm-12 list-item with-bullet">
+    <div class="col-sm-10">
+        <h4> <span class="paper-title">Half-factorial real quadratic orders</span>
+        <span class="paper-author"></span></h4>
+    </div>
+    <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/HFD-Artin.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
+</li>         
+
+
 
 
 
