--- a/8440f23.html
+++ b/8440f23.html
@@ -153,7 +153,7 @@
                                                 <ul list-style: square;>
                                                 <li class="with-bullet"> Erdős--Wintner theorem
                                                 <li class="with-bullet"> Erdős--Kac theorem
-                                                <li class="with-bullet"> Artin's primitive root conjecture and the theorems of Hoooley, Gupta--Murty--Srinivasan--Heath-Brown
+                                                <li class="with-bullet"> Artin's primitive root conjecture and the theorems of Hooley, Gupta--Murty--Srinivasan--Heath-Brown
                                                 <li class="with-bullet"> Bounds on character sums and applications to the distribution of power residues 
                                                 </li>
                                                 </ul>
@@ -178,14 +178,39 @@
                                                 <p> As befits a class of this kind, your grade is based entirely on your participation as a member of our class community. 
 												</p>
                                         </div></div>
+
                                         <div class="module-block row">
                                             <div class="module-title col-sm-3 text-right">
                                                 <h6>Special accommodations</h6>
                                             </div>
                                             <div class="module-content col-sm-9">
-                                                <p>Students with disabilities who may require special accommodations should talk to me as soon as possible. Appropriate documentation concerning disabilities may be required. For further information, please visit the <a href="http://drc.uga.edu/">Disabilities Resource Center page</a>.</p>
+                                                <p>Students with disabilities who may require special accommodations should talk to me as soon as possible. Appropriate documentation concerning disabilities may be required. If you
+plan to request accommodations for a disability, please register with the Disability Resource Center. They can be reached by visiting Clark Howell Hall, calling 706-542-8719 (voice) or 706-542-877 (TTY), or by visiting <a href="http://drc.uga.edu">http://drc.uga.edu</a>.
                                             </div>
                                         </div>
+                                        <div class="module-block row">
+                                            <div class="module-title col-sm-3 text-right">
+                                                <h6>Mental health and wellness</h6>
+                                            </div>
+                                            <div class="module-content col-sm-9"><p>
+                                        If you or someone you know needs assistance, you are encouraged to contact Student Care and Outreach in the Division of Student Affairs at 706-542-8479 or visit <a href="https://sco.uga.edu">https://sco.uga.edu</a>. They will help you navigate any difficult circumstances you may be facing by connecting you with the appropriate resources or services. UGA has several resources for a student seeking mental health services (<a href="https://caps.uga.edu/well-being-prevention-programs-mental-health/">https://caps.uga.edu/well-being-prevention-programs-mental-health/</a>) or crisis support (<a href="https://healthcenter.uga.edu/emergencies/">https://healthcenter.uga.edu/emergencies/</a>).
+               </div>
+                                        </div>
+
+                                        <div class="module-block row">
+                                            <div class="module-title col-sm-3 text-right">
+                                                <h6>FERPA Notice</h6>
+                                            </div>
+                                            <div class="module-content col-sm-9"><p>
+                                       The Federal Family Educational Rights and Privacy Act (FERPA) grants students certain information privacy rights. See the registrar’s explanation at <a href="https://reg.uga.edu/general-information/ferpa/">reg.uga.edu/general-information/ferpa/</a>. FERPA allows disclosure of directory information (name, address, telephone, email, major, activities, degrees, awards, prior schools), unless requested in a written letter to the registrar.
+               </div>
+                                        </div>
+                                    </div>
+
+
+
+                                </div>
+                            </div>
                             <div class="col-sm-12 content__item">
                                 <div class="card">
                                     <div class="card__body boxed boxed--lg bg--white bg--warning">
@@ -200,10 +225,6 @@
                                     </div>
                                 </div>
                             </div>
-                            <!--end item-->
-                        </div>
-                        <!--end of content container-->
-                    </div>
                     <!--end main content-->
                 </div>
             </div>
