--- a/3100f23.html
+++ b/3100f23.html
@@ -165,7 +165,7 @@
                                                 <h6>Textbook</h6>
                                             </div>
                                             <div class="module-content col-sm-9">
-                                                <p>We will use the course notes by recently retired UGA Profesor <a href="http://www.math.uga.edu/directory/malcolm-r-adams">Malcolm Adams</a>. You may <a href="https://outlookuga-my.sharepoint.com/personal/mradams_uga_edu/_layouts/15/guestaccess.aspx?guestaccesstoken=RPAsP689jnrYQyVCytrTzO1xgwQjZtIszdbtLDqudFc%3d&docid=02afcc70f744845c680c272c745249f65">download the notes</a> from his website. These notes were written with this course in mind, and so we will aim to make it all the way through.</p>
+                                                <p>Our primary resource will be the MATH 3100 course notes developed by UGA Professor Emeritus <a href="http://www.math.uga.edu/directory/malcolm-r-adams">Malcolm Adams</a>. You may <a href="https://outlookuga-my.sharepoint.com/personal/mradams_uga_edu/_layouts/15/guestaccess.aspx?guestaccesstoken=RPAsP689jnrYQyVCytrTzO1xgwQjZtIszdbtLDqudFc%3d&docid=02afcc70f744845c680c272c745249f65">download the notes</a> from his website. These notes were written with this course in mind and we will follow them closely for about 80%  of the semester.</p>
                                             </div>
                                         </div>
                                         <div class="module-block row">
@@ -176,7 +176,7 @@
                                                 <p>This is a difficult course! There is no shame (far from it!) in seeking help when you get stuck.
 I strongly recommend that you show up at office hours (times TBD); even better, show up and bring a friend! Note that these are intended as collaborative problem solving sessions. As such: You should expect me to give hints and to follow up on ideas you tried, not to simply telegraph answers.</p>
 <p>
-Both at office and in class, you should expect that your input will be treated respectfully, by myself and by your classmates. Turning it around, you are expected to show respect and understanding for your classmates’ ideas. Kindness is always important!</p>
+Both at office and in class, you should expect that your input will be treated respectfully, by myself and by your classmates. Turning it around, you are expected to show respect and understanding for your classmates’ ideas. Kindness is important --- everywhere and always!</p>
                                             </div>
                                         </div>
                                     </div>
