--- a/3100f23.html
+++ b/3100f23.html
@@ -242,7 +242,7 @@ Both at office and in class, you should expect that your input will be treated r
                                                 <h6>Special accommodations</h6>
                                             </div>
                                             <div class="module-content col-sm-9">
-                                                <p>Students with disabilities who may require special accommodations should talk to me as soon as possible. Appropriate documentation concerning disabilities may be required. If you
+                                                <p>Students with disabilities who may require special accommodations should talk to me as soon as possible. Appropriate documentation concerning disabilities may be required. For further informati                                                <p>Students with disabilities who may require special accommodations should talk to me as soon as possible. Appropriate documentation concerning disabilities may be required. If you
 plan to request accommodations for a disability, please register with the Disability Resource Center. They can be reached by visiting Clark Howell Hall, calling 706-542-8719 (voice) or 706-542-877 (TTY), or by visiting <a href="http://drc.uga.edu">http://drc.uga.edu</a>.
                                             </div>
                                         </div>
@@ -261,15 +261,7 @@ plan to request accommodations for a disability, please register with the Disabi
                                             </div>
                                             <div class="module-content col-sm-9"><p>
                                        The Federal Family Educational Rights and Privacy Act (FERPA) grants students certain information privacy rights. See the registrar’s explanation at <a href="https://reg.uga.edu/general-information/ferpa/">reg.uga.edu/general-information/ferpa/</a>. FERPA allows disclosure of directory information (name, address, telephone, email, major, activities, degrees, awards, prior schools), unless requested in a written letter to the registrar.
-               </div>
-                                        </div>
-                                    </div>
-
-
-
-                                </div>
-                            </div>
-                            <div class="col-sm-12 content__item">
+>
                                 <div class="card">
                                     <div class="card__body boxed boxed--lg bg--white bg--warning">
                                         <div class="module-block row">
