fixed typo in 3100f23

--- a/3100f23.html
+++ b/3100f23.html
@@ -176,7 +176,7 @@
                                                 <p>This is a difficult course! There is no shame (far from it!) in seeking help when you get stuck.
 I strongly recommend that you show up at office hours (times TBD); even better, show up and bring a friend! Note that these are intended as collaborative problem solving sessions. As such: You should expect me to give hints and to follow up on ideas you tried, not to simply telegraph answers.</p>
 <p>
-Both at office and in class, you should expect that your input will be treated respectfully, by myself and by your classmates. Turning it around, you are expected to show respect and understanding for your classmates’ ideas. Kindness is important --- everywhere and always!</p>
+Both at office hours and in class, you should expect that your input will be treated respectfully, by myself and by your classmates. Turning it around, you are expected to show respect and understanding for your classmates’ ideas. Kindness is important --- everywhere and always!</p>
                                             </div>
                                         </div>
                                     </div>
