--- a/3100f23.html
+++ b/3100f23.html
@@ -134,7 +134,7 @@
                                             </div>
                                              <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
-
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">8/18</span><span class="course-task col-md-10"> Principle of Mathematical Induction (PMI). PMI with an arbitrary base case. </span></li>
                                                 <li class="with-bullet"><span class="course-date col-sm-1">8/16</span><span class="course-task col-md-10"> Go over syllabus. Introduction to sequences. </span></li>
                                                 </ul>
                                             </div>
