added accepted paper

--- a/research.html
+++ b/research.html
@@ -2745,6 +2745,26 @@ $$ \frac{e^{-\gamma} x}{\log\log\log{x}} \left(1-\frac{\gamma}{\log\log\log{x}} 
                 </li>   
 
 
+                <li class="col-sm-12 list-item with-bullet">
+                    <div class="col-sm-10">
+                        <h4>    <span class="paper-title">Two problems on the distribution of Carmichael's lambda function</span>  <span class="paper-author"></span>          </h4>
+                        <p>
+                            <a href="https://londmathsoc.onlinelibrary.wiley.com/journal/20417942"><span class="journal-name">Mathematika</span></a> (<span class="paper-year">to appear</span>)</p>
+                    </div>
+                    <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/lambdadist3.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
+                    <div class="paper-abstract col-md-12 col-xs-12">
+                        <p><a class="btn btn--sm btn-abstract" role="button" data-toggle="collapse" href="#paper139" aria-expanded="false" aria-controls="paper139">Abstract</a>
+                            <div class="collapse" id="paper139">
+                                <div class="well paper-abtract-content">
+                                    <p> Let $\lambda(n)$ denote the exponent of the multiplicative group modulo $n$. We show that when $q$ is odd, each coprime residue class modulo $q$ is hit equally often by $\lambda(n)$ as $n$ varies. Under the stronger assumption that $\gcd(q,6)=1$, we prove that equidistribution persists throughout a Siegel--Walfisz-type range of uniformity. By similar methods we show that $\lambda(n)$ obeys Benford's leading digit law with respect to natural density. Moreover, if we assume GRH, then Benford's law holds for the order of $a$ mod $n$, for any fixed integer $a\notin \{0,\pm 1\}$.</p>
+
+                       </div>
+                            </div>
+                        </p>
+                    </div>
+                </li>   
+
+
 
 
                                                 </ul>
@@ -2765,13 +2785,7 @@ $$ \frac{e^{-\gamma} x}{\log\log\log{x}} \left(1-\frac{\gamma}{\log\log\log{x}} 
                                                     </li>
                                                 
 
- <li class="col-sm-12 list-item with-bullet">
-    <div class="col-sm-10">
-        <h4> <span class="paper-title">Two problems on the distribution of Carmichael's lambda function</span>
-        <span class="paper-author"></span></h4>
-    </div>
-    <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/lambdadist3.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
-</li>                                                                                                     <li class="col-sm-12 list-item with-bullet">
+                                                                              <li class="col-sm-12 list-item with-bullet">
     <div class="col-sm-10">
         <h4> <span class="paper-title">Densities of integer sets represented by quadratic forms</span>
         <span class="paper-author">(w/ P.L. Clark, J. Rouse, and K. Thompson)</span></h4>
