--- a/3100f23.html
+++ b/3100f23.html
@@ -105,7 +105,9 @@
                                                 </div>
                                                 <div class="office-hours"><p>
                                                      <strong>Office hours:</strong><br>
-                                                       TBA
+                                                       Monday 4:00 PM<br>
+                                                       Tuesday 3:00 PM<br>
+                                                       Friday 4:00 PM
                                                      </strong></p>
                                                     </div>
                                                 <div class="course-notice">This page is an online copy of the syllabus. The web page will occasionally be updated with additional course materials.</div>
@@ -118,8 +120,10 @@
                                                 <h6>Current assignments/other course materials</h6>
                                             </div>
                                             <div class="module-content col-sm-9">
-                                
-                                                Watch this space!
+                                                <ul class="assignment-list">
+                                                            <li class="with-bullet"><span class="col-md-9 assignment-name">Assignment #1</span><span class="col-md-2 due-date">due 8/28</span><span class="col-md-1"><a href="http://pollack.uga.edu/3100f23/hw1.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
+                                                                </li>
+                                                            </ul>
                                             </div>
                                         </div>
                                     </div>
