--- a/8440f23.html
+++ b/8440f23.html
@@ -127,6 +127,7 @@
 
                                                   <ul class="course-summary-to-date">
                                                     <ul class="course-summary-to-date">
+                                                        <li class="with-bullet"><span class="course-date col-sm-1">8/23</span><span class="course-task col-md-10">Pólya--Vinogradov inequality for characters mod $p$</span></li>
                                                         <li class="with-bullet"><span class="course-date col-sm-1">8/21</span><span class="course-task col-md-10">Erdős--Kac presentation</span></li>
                                                         <li class="with-bullet"><span class="course-date col-sm-1">8/18</span><span class="course-task col-md-10"> Group assignments. Spiel about elasticity in quadratic orders. </span></li>
                                                 <li class="with-bullet"><span class="course-date col-sm-1">8/16</span><span class="course-task col-md-10"> Organizational meeting. </span></li>
