--- a/3100f23.html
+++ b/3100f23.html
@@ -121,6 +121,9 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="assignment-list">
+                                                    <li class="with-bullet"><span class="col-md-9 assignment-name">Assignment #1</span><span class="col-md-2 due-date">due 9/6</span><span class="col-md-1"><a href="http://pollack.uga.edu/3100f23/hw2.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
+                                                    </li>
+
                                                             <li class="with-bullet"><span class="col-md-9 assignment-name">Assignment #1</span><span class="col-md-2 due-date">due 8/28</span><span class="col-md-1"><a href="http://pollack.uga.edu/3100f23/hw1.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                                 </li>
                                                             </ul>
@@ -138,6 +141,8 @@
                                             </div>
                                              <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">8/28</span><span class="course-task col-md-10"> The sum of two eventually increasing sequences is eventually increasing. Definition of convergence. Constant sequences converge to the corresponding constant value. The sequence $\{1/n\}$ converges to $0$.
+                                                    </span></li>
                                                     <li class="with-bullet"><span class="course-date col-sm-1">8/25</span><span class="course-task col-md-10"> Characterization of bounded sequences in terms of absolute values. Definition and examples of subsequences. Subsequences of increasing sequences are increasing. Formulating a precise definition of &quot;eventually increasing&quot;.
                                                          </span></li>
                                                     <li class="with-bullet"><span class="course-date col-sm-1">8/23</span><span class="course-task col-md-10"> Sequences as functions. Increasing and decreasing sequences. If $\{a_k\}$ is increasing, and $n \le m$, then $a_n \le a_m$. Bounded above and bounded below.  </span></li> 
