--- a/3100f23.html
+++ b/3100f23.html
@@ -141,6 +141,8 @@
                                             </div>
                                              <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">8/30</span><span class="course-task col-md-10"> The sequence $\{(-1)^n\}$ diverges. A convergent sequence has a unique real number limit. First example of proving a specific limit &quot;by hand&quot; (from the limit definition).
+                                                    </span></li>
                                                     <li class="with-bullet"><span class="course-date col-sm-1">8/28</span><span class="course-task col-md-10"> The sum of two eventually increasing sequences is eventually increasing. Definition of convergence. Constant sequences converge to the corresponding constant value. The sequence $\{1/n\}$ converges to $0$.
                                                     </span></li>
                                                     <li class="with-bullet"><span class="course-date col-sm-1">8/25</span><span class="course-task col-md-10"> Characterization of bounded sequences in terms of absolute values. Definition and examples of subsequences. Subsequences of increasing sequences are increasing. Formulating a precise definition of &quot;eventually increasing&quot;.
