--- a/research.html
+++ b/research.html
@@ -2665,7 +2665,7 @@ $$ \frac{e^{-\gamma} x}{\log\log\log{x}} \left(1-\frac{\gamma}{\log\log\log{x}} 
                     <div class="col-sm-10">
                         <h4>    <span class="paper-title">On the greatest common divisor of a number and its sum of divisors, II</span>  <span class="paper-author"></span>          </h4>
                         <p>
-                            <a href="https://link.springer.com/book/9783031316166">Number Theory in Memory of Eduard Wirsing</a>, Helmut Maier, Jörn Steuding, Rasa Steuding, eds. Springer Cham (<span class="paper-year">to appear</span>)</p>
+                            <a href="https://link.springer.com/book/9783031316166">Number Theory in Memory of Eduard Wirsing</a>, Helmut Maier, Jörn Steuding, Rasa Steuding, eds. Springer Cham (<span class="paper-year">2023</span>)</p>
                     </div>
                     <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/gcdnsigmasequel.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
                     <div class="paper-abstract col-md-12 col-xs-12">
@@ -2706,7 +2706,7 @@ $$ \frac{e^{-\gamma} x}{\log\log\log{x}} \left(1-\frac{\gamma}{\log\log\log{x}} 
                     <div class="col-sm-10">
                         <h4>    <span class="paper-title">On Benford's law for multiplicative functions</span>  <span class="paper-author">(w/ V. Chandee, X. Li, and A. Singha Roy)</span>          </h4>
                         <p>
-                            <a href="https://www.ams.org//publications/journals/journalsframework/proc"><span class="journal-name">Proc. Amer. Math. Soc.</span></a> (<span class="paper-year">to appear</span>)</p>
+                            <a href="https://www.ams.org//publications/journals/journalsframework/proc"><span class="journal-name">Proc. Amer. Math. Soc.</span></a> 151 (<span class="paper-year">2023</span>), 4607--4619</p>
                     </div>
                     <div class="col-sm-2 paper-btn"><a href="http://pollack.uga.edu/benfordmultiplicative.pdf" target="_blank" class="btn btn--sm btn-pdf">PDF</a></div>
                     <div class="paper-abstract col-md-12 col-xs-12">
