--- a/3100f23.html
+++ b/3100f23.html
@@ -121,6 +121,10 @@
                                             </div>
                                             <div class="module-content col-sm-9">
                                                 <ul class="assignment-list">
+                                                    <li class="with-bullet"><span class="col-md-9 assignment-name">Assignment #3</span><span class="col-md-2 due-date">due 9/15</span><span class="col-md-1"><a href="http://pollack.uga.edu/3100f23/hw3.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
+                                                    </li>
+
+
                                                     <li class="with-bullet"><span class="col-md-9 assignment-name">Assignment #2</span><span class="col-md-2 due-date">due 9/6</span><span class="col-md-1"><a href="http://pollack.uga.edu/3100f23/hw2.pdf" class="btn btn--sm btn-pdf">PDF</a></span>
                                                     </li>
 
@@ -141,6 +145,9 @@
                                             </div>
                                              <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">9/6</span><span class="course-task col-md-10"> Convergence/divergence of geometric series. If all $a_n \le U$, and $a_n\to A$, then $A \le U$. If $a_n\to A$ and $\{a_n\}$ is increasing, then each $a_n \le A$.
+                                                    </span></li>
+
                                                     <li class="with-bullet"><span class="course-date col-sm-1">9/1</span><span class="course-task col-md-10"> Another example of proving a limit by hand. Convergent sequences are bounded. If $\{a_n\}$ converges to the real number $L$, then every subsequence of $\{a_n\}$ also converges to $L$.
                                                     </span></li>
 
