--- a/8440f23.html
+++ b/8440f23.html
@@ -127,6 +127,7 @@
 
                                                   <ul class="course-summary-to-date">
                                                     <ul class="course-summary-to-date">
+                                                        <li class="with-bullet"><span class="course-date col-sm-1">9/6</span><span class="course-task col-md-10">Vinogradov's upper bound on the least quadratic nonresidue</span></li>
                                                         <li class="with-bullet"><span class="course-date col-sm-1">9/1</span><span class="course-task col-md-10">Artin's primitive root conjecture, continued</span></li>
                                                         <li class="with-bullet"><span class="course-date col-sm-1">8/30</span><span class="course-task col-md-10">Erdős--Kac, completion</span></li>
                                                         <li class="with-bullet"><span class="course-date col-sm-1">8/28</span><span class="course-task col-md-10">Erdős--Kac, ctd.</span></li>
