--- a/3100f23.html
+++ b/3100f23.html
@@ -145,6 +145,9 @@
                                             </div>
                                              <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">9/8</span><span class="course-task col-md-10"> Bounded times going to zero goes to zero. Limit sum rule. Difference rule (exercise!). Product rule. 
+                                                    </span></li>
+
                                                     <li class="with-bullet"><span class="course-date col-sm-1">9/6</span><span class="course-task col-md-10"> Convergence/divergence of geometric series. If all $a_n \le U$, and $a_n\to A$, then $A \le U$. If $a_n\to A$ and $\{a_n\}$ is increasing, then each $a_n \le A$.
                                                     </span></li>
 
