--- a/3100f23.html
+++ b/3100f23.html
@@ -148,6 +148,10 @@
                                             </div>
                                              <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">9/11</span><span class="course-task col-md-10"> Completion of the proof of the quotient rule. Statement of the ratio test (no proof). Definitions of diverging to $\infty$ and to $-\infty$.
+                                                    </span></li>
+
                                                     <li class="with-bullet"><span class="course-date col-sm-1">9/8</span><span class="course-task col-md-10"> Bounded times going to zero goes to zero. Limit sum rule. Difference rule (exercise!). Product rule. 
                                                     </span></li>
 
