--- a/3100f23.html
+++ b/3100f23.html
@@ -148,6 +148,9 @@
                                             </div>
                                              <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">9/15</span><span class="course-task col-md-10"> Midterm #1.
+                                                    </span></li>
+
                                                     <li class="with-bullet"><span class="course-date col-sm-1">9/13</span><span class="course-task col-md-10"> Discussion of $\mathbb{R}$ vs $\mathbb{Q}$. Statement of the completeness axiom. A proof that $\sqrt{2} \in \mathbb{R}$. Every monotone sequence has a convergent subsequence. Deduction from: Every sequence has a monotone subsequence. 
                                                     </span></li>
                                                     <li class="with-bullet"><span class="course-date col-sm-1">9/11</span><span class="course-task col-md-10"> Completion of the proof of the quotient rule. Statement of the ratio test (no proof). Definitions of diverging to $\infty$ and to $-\infty$.
