--- a/8440f23.html
+++ b/8440f23.html
@@ -127,6 +127,7 @@
 
                                                   <ul class="course-summary-to-date">
                                                     <ul class="course-summary-to-date">
+                                                        <li class="with-bullet"><span class="course-date col-sm-1">9/15</span><span class="course-task col-md-10">Erdős--Wintner theorem, ctd.</span></li>
                                                         <li class="with-bullet"><span class="course-date col-sm-1">9/13</span><span class="course-task col-md-10">Vinogradov's upper bound on the least quadratic nonresidue, continued. Counting primitive roots mod $p$. </span></li>
                                                         <li class="with-bullet"><span class="course-date col-sm-1">9/11</span><span class="course-task col-md-10">Artin's primitive root conjecture, continued</span></li>
                                                         <li class="with-bullet"><span class="course-date col-sm-1">9/8</span><span class="course-task col-md-10">Erdős--Wintner theorem</span></li>
