--- a/3100f23.html
+++ b/3100f23.html
@@ -148,6 +148,9 @@
                                             </div>
                                              <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">9/18</span><span class="course-task col-md-10"> Every sequence has a convergent subsequence.
+                                                        Cauchy sequences as a possible alternative notion of convergence. Convergent sequences are Cauchy. Cauchy implies bounded.
+                                                    </span></li>
                                                     <li class="with-bullet"><span class="course-date col-sm-1">9/15</span><span class="course-task col-md-10"> Midterm #1.
                                                     </span></li>
 
