--- a/8440f23.html
+++ b/8440f23.html
@@ -124,9 +124,9 @@
                                                 <h6>Course summary to date (reverse chronological order)</h6>
                                             </div>
                                             <div class="module-content col-sm-9">
-
                                                   <ul class="course-summary-to-date">
                                                     <ul class="course-summary-to-date">
+                                                        <li class="with-bullet"><span class="course-date col-sm-1">9/18</span><span class="course-task col-md-10">Start of Gupta--Murty--Heath-Brown approach to Artin's conjecture</span></li>
                                                         <li class="with-bullet"><span class="course-date col-sm-1">9/15</span><span class="course-task col-md-10">Erdős--Wintner theorem, ctd.</span></li>
                                                         <li class="with-bullet"><span class="course-date col-sm-1">9/13</span><span class="course-task col-md-10">Vinogradov's upper bound on the least quadratic nonresidue, continued. Counting primitive roots mod $p$. </span></li>
                                                         <li class="with-bullet"><span class="course-date col-sm-1">9/11</span><span class="course-task col-md-10">Artin's primitive root conjecture, continued</span></li>
