--- a/3100f23.html
+++ b/3100f23.html
@@ -148,6 +148,9 @@
                                             </div>
                                              <div class="module-content col-sm-9">
                                                 <ul class="course-summary-to-date">
+                                                    <li class="with-bullet"><span class="course-date col-sm-1">9/20/span><span class="course-task col-md-10"> All Cauchy sequences converge. 
+                                                        Definition of the least upper bound. Statement of the Least Upper Bound Property of the real numbers: Every nonempty subset of $\<mathbb>R</mathbb>$ that is bounded above has a least upper bound. Sketch of a proof that $\sqrt{2}$ exists  in the real numbers based on the Least Upper Bound Property.
+                                                    </span></li>
                                                     <li class="with-bullet"><span class="course-date col-sm-1">9/18</span><span class="course-task col-md-10"> Every sequence has a convergent subsequence.
                                                         Cauchy sequences as a possible alternative notion of convergence. Convergent sequences are Cauchy. Cauchy implies bounded.
                                                     </span></li>
